[tool.poetry]
name = "ytapi"
version = "0.1.0"
description = ""
authors = ["preitychib <preeti.chib2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.52.0"
google-auth-oauthlib = "^0.5.2"
google-auth-httplib2 = "^0.1.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
